--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <mybatis-plus-generator.version>3.5.3</mybatis-plus-generator.version>
         <druid-spring-boot-starter.version>1.2.11</druid-spring-boot-starter.version>
         <springdoc-openapi-ui.version>1.6.9</springdoc-openapi-ui.version>
+        <knife4j-springdoc-ui.version>3.0.3</knife4j-springdoc-ui.version>
     </properties>
 
     <dependencies>
@@ -61,6 +62,11 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>${springdoc-openapi-ui.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-springdoc-ui</artifactId>
+            <version>${knife4j-springdoc-ui.version}</version>
         </dependency>
 
         <dependency>
